--- a/01_01_exam.html
+++ b/01_01_exam.html
@@ -9,7 +9,7 @@
     git test
     <h1>HTML</h1>
     <p>
-        HTML은 웹페이지를 만드는 표준 마크업 언어이다.<br><br>
+        HTML은 웹페이지를 만드는 표준 마크업 언어입니다.<br><br>
         항상 &lt;html&gt; &lt;head&gt; &lt;body&gt; 태그가 사용된다.
     </p>
 </body>
