--- a/index.html
+++ b/index.html
@@ -6,13 +6,47 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>첫번째 문서입니다.</title>
-  <link rel="shortcut icon" href="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTA0MjhfMyAg%2FMDAxNjE5NTkxMzY4ODUx.iwv6Nr1lpypCB8m579HvMh3j7XJYCCgQtZJqhx3ykMsg.8SQfqEA4xDf_PkvZve_MgNPxjaSGJvgIDuJ9pzhm5FUg.JPEG.amore815%2F%25C8%25AD%25C0%25CC%25C6%25AE%25C6%25F7%25B8%25DE.jpg&type=sc960_832">
+  <link rel="shortcut icon"
+    href="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTA0MjhfMyAg%2FMDAxNjE5NTkxMzY4ODUx.iwv6Nr1lpypCB8m579HvMh3j7XJYCCgQtZJqhx3ykMsg.8SQfqEA4xDf_PkvZve_MgNPxjaSGJvgIDuJ9pzhm5FUg.JPEG.amore815%2F%25C8%25AD%25C0%25CC%25C6%25AE%25C6%25F7%25B8%25DE.jpg&type=sc960_832">
+
+  <meta property="og:title" content="안녕?" />
+  <meta property="og:description" content="반갑습니다" />
+  <meta property="og:image"
+    content="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTA0MjhfMyAg%2FMDAxNjE5NTkxMzY4ODUx.iwv6Nr1lpypCB8m579HvMh3j7XJYCCgQtZJqhx3ykMsg.8SQfqEA4xDf_PkvZve_MgNPxjaSGJvgIDuJ9pzhm5FUg.JPEG.amore815%2F%25C8%25AD%25C0%25CC%25C6%25AE%25C6%25F7%25B8%25DE.jpg&type=sc960_832"
+    }" />
+
+    <a href="http://www.naver.com">네이버</a>
+    <a href="http://www.daum.net">다음</a>
+    <a href="./01_01_exam.html">1번예제</a>
+
+  <style>
+    a:link {
+      color: green;
+      background-color: transparent;
+      text-decoration: none;
+    }
+
+    a:visited {
+      color: pink;
+      background-color: transparent;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color: red;
+    }
+
+    a:active {
+      color: yellow;
+    }
+  </style>
+
 </head>
 
 <body>
   <h3>test</h3>
   <h1>test1</h1>
-  
+
   <h4 style="font-size: 40px; color:lightgreen; border: 20px solid rgba(105, 209, 192, 0.644); ">test4</h4>
 
   <p>wel&nbsp;come</p>
