--- a/label.html
+++ b/label.html
@@ -3,7 +3,7 @@
 
         <!-- label id가 중요 -->
         <input type="checkbox" name="" id="aa">
-        <label for "aa">개발자</label>
+        <label for="aa">개발자</label>
 
         <input type="radio" name="address" id="sejong">
         <label for="sejong">세종</label>
